configs/wofi_1/style.css
*{
	border: none;
	margin: 0;
	padding: 0;
	outline: none;
	color: #D1C2E9;
}

window{
	font-family: "JetBrains Mono Medium";
	background-color: #1E2127;
}

#outer-box{
	border-style: solid;
	border-color: #807BF7;
	border-width: 3px;
	border-radius: 10px;
}

#entry{
	padding: 0.5em;
	font-size: 1.5em;
}

#entry:selected{
	background-color: #807BF7;
}

#input{
	background-color: #1E2127;
	padding: 0.5em;
	font-size: 1.5em;
}

image{
	margin-right: 0.5em;
	background-color: #807BF7;
	border-radius: 5px;
	padding: 5px;
}

